<resources>
    <string name="app_name">EvsAndroid49</string>
    <string name="textview_name_helloworld">Hello World</string>
    <string name="button_ok">OK</string>
    <string name="textview_splash_label">Splash Sample</string>
    <string name="tb_offText">OFF</string>
    <string name="tb_onText">ON</string>
    <string name="et_hint_username">enter username</string>
    <string name="et_hint_password">enter password</string>
    <string name="btn_submit">submit</string>
    <string name="signin_btn_text">Sign in</string>
    <string name="register_btn_text">Register</string>
    <string name="hint_edittext_password">password</string>
    <string name="r_hint_edittext_password">enter password</string>
    <string name="hint_edittext_userid">userid / email</string>
    <string name="r_hint_edittext_userid">enter [userid / email]</string>
    <string name="regitertext_textview_text">Register</string>
    <string name="send_message_hint">enter message</string>
    <string name="enter_phone_no_hint">enter phone number</string>
</resources>
