<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/auth_signinfrag_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/signinform_layout_marginRight"
        android:layout_marginLeft="@dimen/signinform_layout_marginLeft"
        android:layout_marginRight="@dimen/signinform_layout_marginRight"
        android:layout_marginStart="@dimen/signinform_layout_marginLeft"
        android:background="@drawable/sigininform_background_custom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/auth_username_frag_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/userid_edittext_marginEnd"
                android:layout_marginLeft="@dimen/userid_edittext_marginStart"
                android:layout_marginRight="@dimen/userid_edittext_marginEnd"
                android:layout_marginStart="@dimen/userid_edittext_marginStart"
                android:hint="@string/hint_edittext_userid"
                android:padding="@dimen/userid_edittext_padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/auth_password_frag_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/password_edittext_marginEnd"
                android:layout_marginLeft="@dimen/password_edittext_marginStart"
                android:layout_marginRight="@dimen/password_edittext_marginEnd"
                android:layout_marginStart="@dimen/password_edittext_marginStart"
                android:hint="@string/hint_edittext_password"
                android:inputType="textPassword"
                android:padding="@dimen/password_edittext_padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/auth_signin_frag_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/signin_btn_marginbottm"
                android:layout_marginTop="@dimen/signin_btn_margintop"
                android:background="@drawable/signin_btn_custom_background"
                android:text="@string/signin_btn_text"
                android:textColor="@color/colorRed" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>